<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>it.polimi.ingsw</groupId>
    <artifactId>PSP031</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>My Shelfie</name>

    <properties>
        <project.rootdir>${basedir}</project.rootdir>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <slf4j.version>2.0.7</slf4j.version>
        <log4j.version>2.20.0</log4j.version>

        <errorprone.version>2.18.0</errorprone.version>
        <nullaway.version>0.10.10</nullaway.version>

        <spotless.version>2.35.0</spotless.version>
        <eclipse-jdt.version>4.27</eclipse-jdt.version>

        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M9</maven-surefire-plugin.version>
        <maven-jacoco-plugin.version>0.8.9</maven-jacoco-plugin.version>
    </properties>

    <modules>
        <module>PSP031-client</module>
        <module>PSP031-server</module>
        <module>PSP031-common</module>
        <module>PSP031-integration-tests</module>
        <module>PSP031-jacoco-report</module>
        <module>PSP031-jlink</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>it.polimi.ingsw</groupId>
                <artifactId>PSP031-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.polimi.ingsw</groupId>
                <artifactId>PSP031-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.polimi.ingsw</groupId>
                <artifactId>PSP031-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>it.polimi.ingsw</groupId>
                <artifactId>PSP031-integration-tests</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.9.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <distributionManagement>
        <site>
            <id>${project.artifactId}-site</id>
            <url>${project.baseUri}</url>
        </site>
    </distributionManagement>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <show>package</show>
                </configuration>
                <reportSets>
                    <reportSet>
                        <id>aggregate</id>
                        <inherited>false</inherited>
                        <reports>
                            <report>aggregate</report>
                        </reports>
                    </reportSet>
                    <reportSet>
                        <id>default</id>
                        <reports>
                            <report>javadoc</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>

    <build>
        <plugins>
            <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
            <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>-XDcompilePolicy=simple</arg>
                        <arg>-Xplugin:ErrorProne -Xep:NullAway:ERROR
                            -XepOpt:NullAway:AnnotatedPackages=it.polimi.ingsw
                            -XepOpt:NullAway:ExcludedFieldAnnotations=javafx.fxml.FXML
                        </arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.google.errorprone</groupId>
                            <artifactId>error_prone_core</artifactId>
                            <version>${errorprone.version}</version>
                        </path>
                        <path>
                            <groupId>com.uber.nullaway</groupId>
                            <artifactId>nullaway</artifactId>
                            <version>${nullaway.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <skip>true</skip>
                    <mainClass>none</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <skip>true</skip>
                    <executable>${java.home}/bin/java</executable>
                    <mainClass>none</mainClass>
                    <runtimePathOption>CLASSPATH</runtimePathOption>
                    <options>
                        <option>--enable-preview</option>
                    </options>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>@{jacocoArgLine} --enable-preview</argLine>
                    <systemPropertyVariables>
                        <sun.rmi.transport.connectionTimeout>1000</sun.rmi.transport.connectionTimeout>
                        <sun.rmi.transport.tcp.readTimeout>1000</sun.rmi.transport.tcp.readTimeout>
                        <sun.rmi.transport.tcp.responseTimeout>1000</sun.rmi.transport.tcp.responseTimeout>
                        <sun.rmi.transport.tcp.handshakeTimeout>1000</sun.rmi.transport.tcp.handshakeTimeout>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${maven-jacoco-plugin.version}</version>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <propertyName>jacocoArgLine</propertyName>
                    <excludes>
                        <exclude>it/polimi/ingsw/client/tui/**/*</exclude>
                        <exclude>it/polimi/ingsw/client/javafx/**/*</exclude>
                        <exclude>it/polimi/ingsw/server/Main.*</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>4.0.0-M5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.4.2</version>
            </plugin>
            <!-- Code formatting -->
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.version}</version>
                <configuration>
                    <java>
                        <eclipse>
                            <version>${eclipse-jdt.version}</version>
                            <file>${project.rootdir}/eclipse-formatter.xml</file> <!-- optional -->
                        </eclipse>
                        <importOrder>
                            <wildcardsLast>false</wildcardsLast>
                            <file>${project.rootdir}/eclipse.importorder</file>
                        </importOrder>
                        <removeUnusedImports/>
                    </java>
                </configuration>
            </plugin>
            <!-- JLink stuff -->
            <plugin>
                <groupId>org.codehaus.gmaven</groupId>
                <artifactId>groovy-maven-plugin</artifactId>
                <version>2.1.1</version>
            </plugin>
            <plugin>
                <artifactId>maven-jlink-plugin</artifactId>
                <version>3.1.0</version>
                <extensions>true</extensions>
                <configuration>
                    <compress>2</compress>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <stripDebug>true</stripDebug>
                    <addOptions>
                        <addOption>--enable-preview</addOption>
                    </addOptions>
                    <addModules>
                        <addModule>java.base</addModule>
                        <addModule>java.desktop</addModule>
                        <addModule>java.logging</addModule>
                        <addModule>java.management</addModule>
                        <addModule>java.management.rmi</addModule>
                        <addModule>java.rmi</addModule>
                        <addModule>java.scripting</addModule>
                        <addModule>java.xml</addModule>
                        <addModule>jdk.random</addModule>
                        <addModule>jdk.unsupported</addModule>
                    </addModules>
                    <verbose>true</verbose>
                </configuration>
                <!-- Kill the default execution -->
                <executions>
                    <execution>
                        <id>default-jlink</id>
                        <phase>none</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.4.1</version>
                    <configuration>
                        <filters>
                            <filter>
                                <artifact>*:*</artifact>
                                <excludes>
                                    <exclude>module-info.class</exclude>
                                    <exclude>META-INF/versions/**/module-info.class</exclude>
                                    <exclude>META-INF/MANIFEST.MF</exclude>
                                </excludes>
                            </filter>
                        </filters>
                        <transformers>
                            <transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer"/>
                            <transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer"/>
                        </transformers>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.5.0</version>
                    <configuration>
                        <additionalOptions>--enable-preview</additionalOptions>
                        <doclint>all,-missing</doclint>
                        <tags>
                            <tag>
                                <name>apiNote</name>
                                <placement>a</placement>
                                <head>API Note:</head>
                            </tag>
                            <tag>
                                <name>implSpec</name>
                                <placement>a</placement>
                                <head>Implementation Requirements:</head>
                            </tag>
                            <tag>
                                <name>implNote</name>
                                <placement>a</placement>
                                <head>Implementation Note:</head>
                            </tag>
                        </tags>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>format</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>!no-format</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.diffplug.spotless</groupId>
                        <artifactId>spotless-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <phase>process-sources</phase>
                                <goals>
                                    <goal>apply</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>debug-javafx</id>
            <activation>
                <activeByDefault>false</activeByDefault>
                <property>
                    <name>debug-javafx</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.openjfx</groupId>
                        <artifactId>javafx-maven-plugin</artifactId>
                        <configuration>
                            <options>
                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005</option>
                                <option>--enable-preview</option>
                            </options>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>